--- a/tmux.conf
+++ b/tmux.conf
@@ -27,12 +27,12 @@ set -g @tpm_plugins '                     \
     tmux-plugins/tmux-continuum           \
     tmux-plugins/tmux-yank                \
     tmux-plugins/tmux-pain-control        \
-    tmux-plugins/tmux-copycat             \
     tmux-plugins/tmux-open                \
-    tmux-plugins/tmux-battery             \
-    tmux-plugins/tmux-cpu                 \
+    tmux-plugins/tmux-copycat             \
     tmux-plugins/tmux-prefix-highlight    \
 '
+#    tmux-plugins/tmux-battery             \
+#    tmux-plugins/tmux-cpu                 \
 
 
 # Initialize TMUX plugin manager
